--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-safe-area-context": "^5.0.0",
-    "react-native-screens": "^4.3.0"
+    "react-native-screens": "^4.3.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
