--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.75.4",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
